[fix]#10722 align workspace view icons

--- a/css/icons/_pictos.scss
+++ b/css/icons/_pictos.scss
@@ -381,7 +381,7 @@ i.show-list{
 }
 i.show-list:before{
   content: '\e8bc';
-  font-size: 28px;
+  font-size: 24px;
 }
 i.show-list.selected{
   opacity: 0.6;
